# MultiMail

./: .gitignore  CLAUDE.md  HISTORY.md  INSTALL.md  MANUAL.md  Makefile  Makefile.bcc  Makefile.vc  Makefile.wcc  README.md  config.h  depend  meson.build  meson_options.txt  mm.1  tclist
.github/workflows/: appimage.yml  asan.yml  bsd.yml  codeql.yml  docs.yml  dos.yml  linux.yml  macos.yml  msvc.yml  msys2.yml  windows-installer.yml
interfac/: ansiview.cc  basic.cc  help.cc  interfac.cc  interfac.h  isoconv.cc  isoconv.h  letterl.cc  letterw.cc  lettpost.cc  main.cc  packet.cc
mmail/: bw.cc  misc.cc  misc.h  mmail.cc  opx.cc  pktbase.cc  pktbase.h  qheader.cc  qwk.cc  qwk.h  qwkhdr.cc  qwkhdr.h  resource.cc  resource.h
packaging/appimage/: AppRun  build-appimage.sh  multimail.desktop
packaging/windows/: collect-dlls.sh  multimail.iss
tests/: meson.build  misc_test.cc  qheader_test.cc  qwkhdr_test.cc  test.h
